# ProgrammingPearls

./: .gitignore  CMakeLists.txt  Makefile  README.md  array_to_bst.cpp  kosaraju_alg_demo.cpp  makefile  std_partition_demo.cpp
1st/: bit_sort_alg.c  ppearls.h
GdbTurorial/: buggy.c  factorial.c  makefile
GdbTutorial/: buggy.c  factorial.c  makefile
apue/: Makefile  Makefile_openServer_version_1  Makefile_openServer_version_2  abort_demo.c  aio_demo_01.c  anonymous_semaphore_demo.c  apue.h  atexit_demo.c  call_once_demo.cpp  cpp_object_model_demo_01.cpp  daemon.c  daytimetcpcli.c  daytimetcpsrv1.c  ex_08_02.c  ex_08_03.c  ex_08_06.c  ex_08_07.c  ex_09_02.c  ex_10_02.c  ex_10_04.c  ex_10_06.c  ex_10_07.c  ex_10_09.c  ex_10_10.c  ex_10_11.c  ex_10_12.c  ex_11_01.c  ex_11_02.c  ex_12_06.c  ex_13_04.c  ex_16_01.c  fig_03_05.c  fig_03_11.c  fig_03_12.c  fig_04_03.c  fig_04_16.c  fig_06_02.c  fig_06_11.c  fig_07_03.c  fig_07_09.c  (+132 more)
cuda-scaffold/: deviceQuery.cpp  matrixMul.cu  matrixMul_managed_mem.cu  matrixMul_mapped_mem.cu  matrixMultiplyPerf.cu  simpleOccupancy.cu  simpleZeroCopy.cu  vectorAdd.cu
golang-scaffold/: go_knowledge_base.md
hiredis-scaffold/: example.c  example.cpp
improvision/: atoi_alg.c
interview_questions/: CMakeLists.txt  LEETCODE_SCHEDULE_by_huahua.rst  REFERENCE.rst  account_merge.cpp  add_two_numbers.cpp  advanced_topics_online_stock_span.cpp  advanced_topics_range_sum_query.cpp  advanced_topics_sliding_window.cpp  array_sort.cpp  array_to_bst.cpp  backtrace_combination.cpp  backtrace_partition_array.cpp  backtrace_permutation.cpp  backtrace_sudoku_solver.cpp  backtrace_word_ladder.cpp  bfs_dfs_template.py  binary_search_kth_smallest_pair_dis.cpp  binary_search_matrix_search.cpp  binary_search_search_in_rotated_sorted_array.cpp  binary_search_search_insert_pos.cpp  binary_search_sqrt.cpp  binary_search_tester.cpp  binary_tree_coloring_game.cpp  binary_tree_depth.cpp  binary_tree_is_subtree.cpp  binary_tree_leaf_similar.cpp  binary_tree_level_order_traversal.cpp  binary_tree_lowest_common_ancestor.cpp  binary_tree_path_sum.cpp  binary_tree_prune_tree.cpp  binary_tree_same_tree.cpp  binary_tree_serialization_and_deserializaiton.cpp  binary_tree_traversal.cpp  binary_tree_width.cpp  bst_search.cpp  bst_traversal.cpp  combination_permutation_template.py  combination_template.py  critical_connections_in_a_network.cpp  cycle_detection_in_graph.py  (+65 more)
interview_questions/util/: disjoint_set.h  disjoint_set_naive_impl.h  dist_table_wrapper.hpp  trie_tree.cpp  trie_tree.h  trip_farthest_insertion.hpp  typedefs.hpp  util.cpp
leetcode-scaffold/: CMakeLists.txt  LEETCODE_Problem_List_by_huahua.rst  add_two_numbers.cpp  advanced_topics_range_sum_query.cpp  array_sort.cpp  backtrace_01_matrix.cpp  backtrace_combination.cpp  backtrace_generate_parenthesis.cpp  backtrace_partition_array.cpp  backtrace_permutation.cpp  backtrace_sudoku_solver.cpp  backtrace_word_ladder.cpp  backtrace_word_search.cpp  binary_search_kth_smallest_pair_dis.cpp  binary_search_matrix_search.cpp  binary_search_search_in_rotated_sorted_array.cpp  binary_search_search_insert_pos.cpp  binary_search_sqrt.cpp  binary_search_tester.cpp  binary_tree_depth.cpp  binary_tree_dfs_traversal.cpp  binary_tree_is_subtree.cpp  binary_tree_lca.cpp  binary_tree_leaf_similar.cpp  binary_tree_level_order_traversal.cpp  binary_tree_lowest_common_ancestor.cpp  binary_tree_max_path_sum.cpp  binary_tree_misc_exercises.cpp  binary_tree_path_sum.cpp  binary_tree_prune_tree.cpp  binary_tree_same_tree.cpp  binary_tree_serialization_and_deserializaiton.cpp  binary_tree_symmetric_tree.cpp  binary_tree_traversal.cpp  binary_tree_vertical_traversal.cpp  binary_tree_width.cpp  bs_kth_smallest_pair_dis.cpp  bs_matrix_search.cpp  bs_search_in_rotated_sorted_array.cpp  bs_search_insert_pos.cpp  (+80 more)
leetcode-scaffold/llm-QA/: llm_qa_note_01.md
leetcode-scaffold/lru_cache/: lru_cache.cpp
leetcode-scaffold/util/: disjoint_set.cpp  disjoint_set.h  isatty.h  log.cpp  timing_util.h  trie_tree.cpp  trie_tree.h  trip_farthest_insertion.hpp  util.cpp
libtbb-scaffold/: CMakeLists.txt  concurrent_map_demo_01.cpp  parallel_for_demo_01.cpp  parallel_for_demo_02.cpp  parallel_for_each_demo_01.cpp  task_scheduler_demo_01.cpp  util.h
machine-learning-note/: .gitignore  References.md  tf_athena_note.md
memcached-scaffold/: CMakeLists.txt  basic_operations_demo_01.cpp  basic_operations_demo_02.cpp  basic_operations_demo_03.cpp  basic_operations_demo_04.cpp  basic_operations_demo_05.cpp  basic_operations_with_key_demo_01.cpp  libmemcached_util.h  main.cpp  memcached_action.cpp  memcached_action.h  print_callbacks.cpp  print_callbacks.h  random_data_generator.cpp  random_data_generator.h
misc-topics/: aggregated_results.csv  cpp_note_01.md  cpp_note_02.md  cpp_note_03.md  cpp_note_04.md  cpp_note_05.md  cpp_note_06.md  cv_abc_note.md  start_gpu.sh  (+34 more)
path_finding_alg/: CMakeLists.txt  Makefile  build.sh
path_finding_alg/alg/: a_star_alg.h  breadth_first_search.h  dijkstra_alg.h  naive_bfs_alg.h
path_finding_alg/data_struct/: priority_queue.h  simple_graph_struct.h  square_grid.cpp  square_grid.h  weighted_grid.h
path_finding_alg/others/: bidirectional_a_star.cpp  bidirectional_a_star.h
path_finding_alg/path_finding_alg/: Makefile  square_grid.cpp
path_finding_alg/path_finding_alg/a_star/: a_star_alg.cpp
path_finding_alg/path_finding_alg/alg/: a_star_alg.cpp  a_star_alg.h
path_finding_alg/path_finding_alg/include/: simple_graph_struct.h
path_finding_alg/path_finding_alg/src/: main.cpp
path_finding_alg/path_finding_alg/util/: grid_drawer.h  util.cpp  util.h
path_finding_alg/python/: a_star_alg.py  path_finding_alg.py
path_finding_alg/src/: main.cpp
path_finding_alg/util/: grid_drawer.h  implementation.cpp  util.cpp  util.h
profile_map/: CMakeLists.txt  profile_map_op.cpp
protobuf-scaffold/: .gitignore  CMakeLists.txt  Makefile  add_person.cpp  addressbook.proto  hello.cpp  hello.proto  hnsw_meta.proto  hnsw_meta_test.cpp  list_people.cpp  scaffold.proto
protobuf-scaffold/proto/: addressbook.proto  scaffold.proto
(+501 files in other folders)
